--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,10 @@ build-backend = "setuptools.build_meta"
 name = "soupx-python"
 version = "0.3.0"
 description = "Python implementation of SoupX for removing ambient RNA contamination from droplet-based single-cell RNA sequencing data"
-readme = "README.md"
+readme = {file = "README.md", content-type = "text/markdown"}  # Specify markdown explicitly
 requires-python = ">=3.8"
 license = {text = "GPL-2.0"}
+maintainers = [{name = "Nicolas Ruffini", email = "nicolas.ruffini@posteo.de"}]
 authors = [
     {name = "Nicolas Ruffini", email = "nicolas.ruffini@posteo.de"},
 ]
@@ -32,31 +33,10 @@ dependencies = [
     "pandas>=1.3.0",
     "scipy>=1.7.0",
     "statsmodels>=0.12.0",
+	"scanpy>=1.8.0",
 ]
 
 [project.optional-dependencies]
-# For load10X function and scanpy integration
-scanpy = [
-    "scanpy>=1.8.0",
-    "anndata>=0.7.0", 
-    "h5py>=3.0.0"
-]
-
-# For development
-dev = [
-    "pytest>=6.0.0",
-    "pytest-cov>=2.10.0",
-    "black>=21.0.0",
-    "flake8>=3.8.0", 
-    "mypy>=0.812"
-]
-
-# All optional dependencies
-all = [
-    "scanpy>=1.8.0",
-    "anndata>=0.7.0",
-    "h5py>=3.0.0"
-]
 
 [project.urls]
 Homepage = "https://github.com/NiRuff/soupx-python"
